Update CORS to use enviroment variable CORS